--- a/.gitlab/dependabot.yml
+++ b/.gitlab/dependabot.yml
@@ -1,10 +1,10 @@
 version: 2
 
 updates:
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: npm
+    directory: /
     schedule:
-      interval: "daily"
+      interval: daily
     open-pull-requests-limit: 20
     rebase-strategy: auto
     auto-merge: false
