--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
@@ -64,6 +65,9 @@
     "not dead"
   ],
   "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)/"
+    ],
     "preset": "@vue/cli-plugin-unit-jest"
   }
 }
