--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.31.0",
     "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
