--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/vue-fontawesome": "^2.0.10",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.31.0",
     "vue": "^2.6.14",
+    "vue-material-design-icons": "^4.13.0",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
