--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
+    "chart.js": "^4.3.2",
     "core-js": "^3.31.0",
     "vue": "^2.6.14",
+    "vue-chartjs": "^5.2.0",
     "vue-material-design-icons": "^4.13.0",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
